# Trashbot

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  load_data.py  pyproject.toml  query_traces.py  run_demo_loop.py
baseline/: 8b_instance_results.csv  8b_instance_results.json  8b_per_instance.csv  8b_per_instance.json  baseline.json  data_profile.json  failed_instance_ids.json  failed_instance_ids.txt  validation_report.json
demo_output/: INM-6__python-odmltables-120.json  _summary.json  adamboche__python-marshmallow-union-33.json  blairconrad__dicognito-158.json  d3dave__cough-3.json  django-money__django-money-689.json  ebmdatalab__datalab-pandas-29.json  iterative__dvc-8554.json  mie-lab__trackintel-408.json  pytorch__ignite-1044.json  repobee__repobee-457.json
docs/: ARCHITECTURE.md  CURSOR_WORKFLOW.md
failed_traces/: 12rambau__sepal_ui-644.json  15five__scim2-filter-parser-13.json  20c__ctl-3.json  3YOURMIND__django-migration-linter-186.json  3YOURMIND__django-migration-linter-258.json  3YOURMIND__django-migration-linter-47.json  4degrees__clique-26.json  ARM-software__mango-11.json  ARMmbed__greentea-237.json  ARMmbed__greentea-243.json  ARMmbed__greentea-250.json  ARMmbed__greentea-263.json  ASFHyP3__hyp3-sdk-152.json  ASFHyP3__hyp3-sdk-51.json  ASFHyP3__hyp3-sdk-53.json  ASFHyP3__hyp3-sdk-71.json  ASPP__pelita-412.json  ASPP__pelita-601.json  Abjad__abjad-ext-nauert-24.json  Adyen__adyen-python-api-library-102.json  Adyen__adyen-python-api-library-276.json  AmiiThinks__driving_gridworld-13.json  AnalogJ__lexicon-336.json  (+3538 more)
(+471 files in other folders)
